--- a/sample.env
+++ b/sample.env
@@ -1,4 +1,4 @@
 PORT=#3000
-SEED_PHRASE=#dinosaur orchard quality virtual supreme worth bubble piano crowd conduct tumble forest
-INFURA_PROVIDER_URL=#https://rinkeby.infura.io/v3/f80d9f8630614f388293d865c597f47d
-ACCOUNT=#0xd963Da46f46Ac958e715920D452C3011752cf812
+SEED_PHRASE=<YOUR SEED PHRASE>
+INFURA_PROVIDER_URL=#https://rinkeby.infura.io/v3/<YOUR INFURA URL>
+ACCOUNT=<YOUR ACCOUNT NUMBER>
